--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,11 @@
 RIOT_API_KEY=
 
-RIOT_API_KEY=
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_HOST=
+POSTGRES_PORT=
 
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
-DB_PORT=
+DJANGO_ADMIN_PASSWORD=
+DJANGO_ADMIN_USERNAME=
+DJANGO_ADMIN_EMAIL=
