--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,11 @@ requires-python = ">=3.13"
 dependencies = [
     "django>=5.2.3",
     "httpx>=0.28.1",
+    "psycopg[binary]>=3.2.9",
     "python-dotenv>=1.1.1",
+]
+
+[dependency-groups]
+dev = [
+    "django-types>=0.21.0",
 ]
